<resources>
    <string name="app_name">WhatsAppClone</string>
    <string name="welcome_to_whatsapp">Welcome to WhatsApp</string>
    <string name="read_out_privacy_html">
    <![CDATA[<p>Read out <font color="#DA8F5">Privacy Policy</font>. Tap "Agree and continue"</br>to accept the <font color="#DA8F5">Term of Service</font><p>]]>
    </string>
    <string name="read_out_privacy">Read out Privacy Policy. Tap "Agree and continue" to accept the Term of Service</string>
    <string name="agree_and_continue">Agree and continue</string>
    <string name="facebook">FACEBOOK</string>
    <string name="from">from</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="click_for_signup">Click for SignUp</string>
    <string name="sign_in">Sign In</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="type_a_message">Type a message</string>
    <string name="new_group">New group</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="whatsapp_web">Whatsapp Web</string>
    <string name="starred_msg">Starred messages</string>
    <string name="payments">Payments</string>
    <string name="status_privacy">Status privacy</string>
    <string name="hold_for_video_tap_for_photo">Hold for video,tap for photo</string>
    <string name="my_status">My status</string>
    <string name="tap_to_add_status_update">Tap to add status update</string>
    <string name="viewed_updates">Viewed updates</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="english">English</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="next">next</string>
    <string name="whatsapp_will_need_yo_verify_your_phone_number_what_s_my_n_number">Whatsapp will need yo verify your phone number. What\'s my\n number?</string>
    <string name="india">India</string>
</resources>