<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/chat_tab_new_group"
        android:title="@string/new_group" />
    <item
        android:id="@+id/chat_tab_new_broadcast"
        android:title="@string/new_broadcast" />
    <item
        android:id="@+id/chat_tab_whatsapp_web"
        android:title="@string/whatsapp_web" />
    <item
        android:id="@+id/chat_tab_starred_msg"
        android:title="@string/starred_msg" />
    <item
        android:id="@+id/chat_tab_payment"
        android:title="@string/payments" />
    <item
        android:id="@+id/chat_tab_setting"
        android:title="@string/setting" />
    <item
        android:id="@+id/chat_tab_logout"
        android:title="@string/logout" />
</menu>